Updated nav and section IDs

--- a/campus-support.html
+++ b/campus-support.html
@@ -57,8 +57,8 @@
       <button class="accordion" onclick="window.location.href='index.html';">Introduction</button>
       <div class="panel" id="panel1">
          <ul>
-            <a href="#welcome"><li>Welcome to The DTC Handbook</li></a>
-            <a href="#credits"><li>Credits</li></a>
+            <a href="index.html#welcome"><li>Welcome to The DTC Handbook</li></a>
+            <a href="index.html#credits"><li>Credits</li></a>
          </ul>
       </div>
 
@@ -97,10 +97,10 @@
       <button class="accordion" onclick="window.location.href='campus-support.html';">Campus and Support</button>
       <div class="panel" id="panel2">
         <ul>
-          <a href="campus-support.html#diversity"><li>Diversity, Equity, Accessibility, and Inclusion</li></a>
-          <a href="campus-support.html#where-dtc"><li>Where Is DTC?</li></a>
-          <a href="campus-support.html#greg-phillbrook"><li>Greg Phillbrook</li></a>
-          <a href="campus-support.html#workshops"><li>Workshops</li></a>
+          <a href="#diversity"><li>Diversity, Equity, Accessibility, and Inclusion</li></a>
+          <a href="#where-dtc"><li>Where Is DTC?</li></a>
+          <a href="#greg-phillbrook"><li>Greg Phillbrook</li></a>
+          <a href="#workshops"><li>Workshops</li></a>
         </ul>
       </div>
       
@@ -127,7 +127,7 @@
     
     <div>
       <h1>
-        Introduction
+        Campus and Support
       </h1> 
     </div>
 
@@ -135,13 +135,27 @@
 
       <h2>Chapter Intro</h2>
 
-      <div class="welcome">
+      <div class="intro-chapter">
        <p>Paragraph Intro</p>
       </div>
 
 
-      <h2 id="credits">
-        Welcome!</h2>
+      <h2 id="diversity">Diversity, Equity, Accessibility, and Inclusion</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="where-dtc">Where is DTC?</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="greg-phillbrook">Greg Phillbrook</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="workshops">Workshops</h2>
 
       <p>paragraphs...</p>
 
