--- a/faculty.html
+++ b/faculty.html
@@ -57,8 +57,8 @@
       <button class="accordion" onclick="window.location.href='index.html';">Introduction</button>
       <div class="panel" id="panel1">
          <ul>
-            <a href="#welcome"><li>Welcome to The DTC Handbook</li></a>
-            <a href="#credits"><li>Credits</li></a>
+            <a href="index.html#welcome"><li>Welcome to The DTC Handbook</li></a>
+            <a href="index.html#credits"><li>Credits</li></a>
          </ul>
       </div>
 
@@ -82,7 +82,7 @@
         <button class="accordion" onclick="window.location.href='faculty.html';">Faculty</button>
       <div class="panel" id="panel1">
          <ul>
-          <a href="faculty.html#department-faculty"><li>Department Faculty</li></a>
+          <a href="#department-faculty"><li>Department Faculty</li></a>
          </ul>
       </div>
 
@@ -127,7 +127,7 @@
     
     <div>
       <h1>
-        Introduction
+        Faculty
       </h1> 
     </div>
 
@@ -135,13 +135,12 @@
 
       <h2>Chapter Intro</h2>
 
-      <div class="welcome">
+      <div class="intro-chapter">
        <p>Paragraph Intro</p>
       </div>
 
 
-      <h2 id="credits">
-        Welcome!</h2>
+      <h2 id="welcome">Department Faculty</h2>
 
       <p>paragraphs...</p>
 
