--- a/program-info.html
+++ b/program-info.html
@@ -57,18 +57,18 @@
       <button class="accordion" onclick="window.location.href='index.html';">Introduction</button>
       <div class="panel" id="panel1">
          <ul>
-            <a href="#welcome"><li>Welcome to The DTC Handbook</li></a>
-            <a href="#credits"><li>Credits</li></a>
+            <a href="index.html#welcome"><li>Welcome to The DTC Handbook</li></a>
+            <a href="index.html#credits"><li>Credits</li></a>
          </ul>
       </div>
 
       <button class="accordion" onclick="window.location.href='program-info.html';">Program Information</button>
       <div class="panel" id="panel2">
         <ul>
-          <a href="program-info.html#general-info"><li>General Information</li></a>
-          <a href="program-info.html#roadmap"><li>Roadmap</li></a>
-          <a href="program-info.html#tools-programs"><li>Tools and Programs</li></a>
-          <a href="program-info.html#classes-explained"><li>Classes: Explained</li></a>
+          <a href="#general-info"><li>General Information</li></a>
+          <a href="#roadmap"><li>Roadmap</li></a>
+          <a href="#tools-programs"><li>Tools and Programs</li></a>
+          <a href="#classes-explained"><li>Classes: Explained</li></a>
         </ul>
       </div>
       
@@ -127,7 +127,7 @@
     
     <div>
       <h1>
-        Introduction
+        Program Information
       </h1> 
     </div>
 
@@ -135,13 +135,27 @@
 
       <h2>Chapter Intro</h2>
 
-      <div class="welcome">
+      <div class="intro-chapter">
        <p>Paragraph Intro</p>
       </div>
 
 
-      <h2 id="credits">
-        Welcome!</h2>
+      <h2 id="general-info">General Information</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="roadmap">Roadmap</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="tools-programs">Tools and Programs</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="classes-explained">Classes: Explained</h2>
 
       <p>paragraphs...</p>
 
