--- a/senior-seminar.html
+++ b/senior-seminar.html
@@ -57,8 +57,8 @@
       <button class="accordion" onclick="window.location.href='index.html';">Introduction</button>
       <div class="panel" id="panel1">
          <ul>
-            <a href="#welcome"><li>Welcome to The DTC Handbook</li></a>
-            <a href="#credits"><li>Credits</li></a>
+            <a href="index.html#welcome"><li>Welcome to The DTC Handbook</li></a>
+            <a href="index.html#credits"><li>Credits</li></a>
          </ul>
       </div>
 
@@ -89,8 +89,8 @@
       <button class="accordion" onclick="window.location.href='senior-seminar.html';">Senior Seminar</button>
       <div class="panel" id="panel2">
         <ul>
-          <a href="senior-seminar.html#what-happens-seminar"><li>What Happens In The Seminar?</li></a>
-          <a href="senior-seminar.html#portfolio"><li>The Portfolio</li></a>
+          <a href="#what-happens-seminar"><li>What Happens In The Seminar?</li></a>
+          <a href="#portfolio"><li>The Portfolio</li></a>
         </ul>
       </div>
       
@@ -127,7 +127,7 @@
     
     <div>
       <h1>
-        Introduction
+        Senior Seminar
       </h1> 
     </div>
 
@@ -135,13 +135,18 @@
 
       <h2>Chapter Intro</h2>
 
-      <div class="welcome">
+      <div class="intro-chapter">
        <p>Paragraph Intro</p>
       </div>
 
 
-      <h2 id="credits">
-        Welcome!</h2>
+      <h2 id="what-happens-seminar">
+        What happens in Senior Seminar?</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="portfolio">The Portfolio</h2>
 
       <p>paragraphs...</p>
 
