--- a/superpowers.html
+++ b/superpowers.html
@@ -57,8 +57,8 @@
       <button class="accordion" onclick="window.location.href='index.html';">Introduction</button>
       <div class="panel" id="panel1">
          <ul>
-            <a href="#welcome"><li>Welcome to The DTC Handbook</li></a>
-            <a href="#credits"><li>Credits</li></a>
+            <a href="index.html#welcome"><li>Welcome to The DTC Handbook</li></a>
+            <a href="index.html#credits"><li>Credits</li></a>
          </ul>
       </div>
 
@@ -75,8 +75,8 @@
       <button class="accordion" onclick="window.location.href='superpowers.html';">Superpowers</button>
       <div class="panel" id="panel2">
         <ul>
-          <a href="superpowers.html#what-are-superpowers"><li>What Are Superpowers?</li></a>
-          <a href="superpowers.html#superpowers-list"><li>Superpowers List</li></a>
+          <a href="#what-are-superpowers"><li>What are Superpowers?</li></a>
+          <a href="#superpowers-list"><li>Superpowers List</li></a>
         </ul>
 
         <button class="accordion" onclick="window.location.href='faculty.html';">Faculty</button>
@@ -89,7 +89,7 @@
       <button class="accordion" onclick="window.location.href='senior-seminar.html';">Senior Seminar</button>
       <div class="panel" id="panel2">
         <ul>
-          <a href="senior-seminar.html#what-happens-seminar"><li>What Happens In The Seminar?</li></a>
+          <a href="senior-seminar.html#what-happens-seminar"><li>What happens in the Seminar?</li></a>
           <a href="senior-seminar.html#portfolio"><li>The Portfolio</li></a>
         </ul>
       </div>
@@ -98,7 +98,7 @@
       <div class="panel" id="panel2">
         <ul>
           <a href="campus-support.html#diversity"><li>Diversity, Equity, Accessibility, and Inclusion</li></a>
-          <a href="campus-support.html#where-dtc"><li>Where Is DTC?</li></a>
+          <a href="campus-support.html#where-dtc"><li>Where is DTC?</li></a>
           <a href="campus-support.html#greg-phillbrook"><li>Greg Phillbrook</li></a>
           <a href="campus-support.html#workshops"><li>Workshops</li></a>
         </ul>
@@ -127,7 +127,7 @@
     
     <div>
       <h1>
-        Introduction
+        Superpowers
       </h1> 
     </div>
 
@@ -135,13 +135,17 @@
 
       <h2>Chapter Intro</h2>
 
-      <div class="welcome">
+      <div class="intro-chapter">
        <p>Paragraph Intro</p>
       </div>
 
 
-      <h2 id="credits">
-        Welcome!</h2>
+      <h2 id="what-are-superpowers">What are Superpowers?</h2>
+
+      <p>paragraphs...</p>
+
+
+      <h2 id="superpowers-list">Superpowers List</h2>
 
       <p>paragraphs...</p>
 
