Minor nav bar changes
Mostly moving around faculty and superpowers links, and re-typing some of the names. Also added in a Credits page and font files that we might use from Basecamp.

--- a/campus-support.html
+++ b/campus-support.html
@@ -57,7 +57,7 @@
       <button class="accordion" onclick="window.location.href='index.html';">Introduction</button>
       <div class="panel" id="panel1">
          <ul>
-            <a href="index.html#welcome"><li>Welcome to The DTC Handbook</li></a>
+            <a href="index.html#welcome"><li>Welcome to the DTC Handbook</li></a>
             <a href="index.html#credits"><li>Credits</li></a>
          </ul>
       </div>
@@ -71,25 +71,28 @@
           <a href="program-info.html#classes-explained"><li>Classes: Explained</li></a>
         </ul>
       </div>
-      
-      <button class="accordion" onclick="window.location.href='superpowers.html';">Superpowers</button>
-      <div class="panel" id="panel2">
-        <ul>
-          <a href="superpowers.html#what-are-superpowers"><li>What Are Superpowers?</li></a>
-          <a href="superpowers.html#superpowers-list"><li>Superpowers List</li></a>
-        </ul>
 
-        <button class="accordion" onclick="window.location.href='faculty.html';">Faculty</button>
+
+      <button class="accordion" onclick="window.location.href='faculty.html';">Faculty</button>
       <div class="panel" id="panel1">
          <ul>
           <a href="faculty.html#department-faculty"><li>Department Faculty</li></a>
          </ul>
       </div>
 
+      
+      <button class="accordion" onclick="window.location.href='superpowers.html';">Superpowers</button>
+      <div class="panel" id="panel2">
+        <ul>
+          <a href="superpowers.html#what-are-superpowers"><li>What are Superpowers?</li></a>
+          <a href="superpowers.html#superpowers-list"><li>Superpowers List</li></a>
+        </ul>
+
+
       <button class="accordion" onclick="window.location.href='senior-seminar.html';">Senior Seminar</button>
       <div class="panel" id="panel2">
         <ul>
-          <a href="senior-seminar.html#what-happens-seminar"><li>What Happens In The Seminar?</li></a>
+          <a href="senior-seminar.html#what-happens-seminar"><li>What happens in the Seminar?</li></a>
           <a href="senior-seminar.html#portfolio"><li>The Portfolio</li></a>
         </ul>
       </div>
@@ -98,7 +101,7 @@
       <div class="panel" id="panel2">
         <ul>
           <a href="#diversity"><li>Diversity, Equity, Accessibility, and Inclusion</li></a>
-          <a href="#where-dtc"><li>Where Is DTC?</li></a>
+          <a href="#where-dtc"><li>Where is DTC?</li></a>
           <a href="#greg-phillbrook"><li>Greg Phillbrook</li></a>
           <a href="#workshops"><li>Workshops</li></a>
         </ul>
