--- a/program-info.html
+++ b/program-info.html
@@ -132,7 +132,7 @@
 
       <h2 id="toc_0" class="program-info">Here's What You Need to Know</h2>
 
-      <img id="img1" src="img/students-in-lab.jpg" alt="Students working together in computer lab">
+      <img id="img1" src="img/students-in-lab_cropped.jpg" alt="Students working together in computer lab">
 
       <p>The Digital Technology and Culture program was started at WSU Vancouver. The program is one of five signature programs on the Vancouver campus. It integrates research and teaching in an intellectually-diverse, technologically innovative experience, applying inter-and transdisciplinary approaches that foster civic engagement from local-to-global contexts in the areas of Digital Humanities, media art, media communication, media studies, information systems.</p>
 
@@ -321,7 +321,7 @@
 
       <h2 id="toc_17" class="program-info">Student Experiences in DTC</h2>
 
-      <img id="img3" src="img/students-in-quad.jpg" alt="Students walking in the WSUV quad">
+      <img id="img3" src="img/students-in-quad_cropped.jpg" alt="Students walking in the WSUV quad">
 
       <h3 id="toc_18">While in the CMDC program what is a DTC course that you have taken that you have enjoyed?</h3>
 
