--- a/senior-seminar.html
+++ b/senior-seminar.html
@@ -132,7 +132,7 @@
 
       <h2 id="toc_0" class="senior-seminar">Structure</h2>
 
-      <img id="img23" src="img/senior-seminar.jpg" alt="Students working in computer lab">
+      <img id="img23" src="img/senior-seminar_cropped.jpg" alt="Students working in computer lab">
 
       <p>The Senior Seminar isn’t like other classes you’ve taken in the program up to this point. The Seminar is intended to give you experience working in teams on a single large project over the semester. Based on your Superpower and interests you will be on a team with others focusing on a specific area of the project. </p>
 
