--- a/superpowers.html
+++ b/superpowers.html
@@ -132,7 +132,7 @@
 
       <h2 class="super" id="toc_0">Web Development</h2>
 
-      <img id="img14" src="img/web-dev.jpg" alt="Code on a computer">
+      <img id="img14" src="img/web-dev_cropped.jpg" alt="Code on a computer">
 
       <h3 id="toc_1">Mentor</h3>
 
@@ -178,7 +178,7 @@
 
       <h2 class="super" id="toc_5">Audio/Video</h2>
 
-      <img id="img15" src="img/audio-video.jpg" alt="Audio/video program on a computer">
+      <img id="img15" src="img/audio-video_cropped.jpg" alt="Audio/video program on a computer">
 
       <h3 id="toc_6">Mentor</h3>
 
@@ -204,7 +204,7 @@
 
       <h2 class="super" id="toc_8">Multimedia Design</h2>
 
-      <img id="img16" src="img/multi-design.jpg" alt="Tablet with design software icons on it">
+      <img id="img16" src="img/multi-design_cropped.jpg" alt="Tablet with design software icons on it">
 
       <h3 id="toc_9">Mentor</h3>
 
@@ -232,7 +232,7 @@
 
       <h2 class="super" id="toc_11">Social Media</h2>
 
-      <img id="img17" src="img/social-media.jpg" alt="Phone with social media apps on it">
+      <img id="img17" src="img/social-media_cropped.jpg" alt="Phone with social media apps on it">
 
       <h3 id="toc_12">Mentor</h3>
 
@@ -261,7 +261,7 @@
 
       <h2 class="super" id="toc_14">Animation</h2>
 
-      <img id="img18" src="img/after-effects-logo.png" alt="After Effects Logo">
+      <img id="img18" src="img/animation_software.jpg" alt="A Variety of Animation Software Program Logos">
 
       <h3 id="toc_15">Mentor</h3>
 
@@ -295,7 +295,7 @@
 
       <h2 class="super" id="toc_17">Digital Publishing</h2>
 
-      <img id="img19" src="img/digital-pub.jpg" alt="Someone typing on a computer">
+      <img id="img19" src="img/digital-pub_cropped.jpg" alt="Someone typing on a computer">
 
       <h3 id="toc_18">Mentor</h3>
 
@@ -318,7 +318,7 @@
 
       <h2 class="super" id="toc_20">UX/UI Design</h2>
 
-      <img id="img20" src="img/ux-ui.jpg" alt="Someone holding a phone in front of a computer">
+      <img id="img20" src="img/ux-ui_cropped.jpg" alt="Someone holding a phone in front of a computer">
 
       <h3 id="toc_21">Mentor</h3>
 
@@ -348,7 +348,7 @@
 
       <h2 class="super" id="toc_23">Game Studies</h2>
 
-      <img id="img21" src="img/game-studies.jpg" alt="Two people holding video game controllers">
+      <img id="img21" src="img/game-studies_cropped.jpg" alt="Two people holding video game controllers">
 
       <h3 id="toc_24">Mentor</h3>
 
@@ -377,7 +377,7 @@
 
       <h2 id="toc_26">Project Management</h2>
 
-      <img id="img22" src="img/proj-manage.jpg" alt="Someone creating a schedule">
+      <img id="img22" src="img/proj-manage_cropped.jpg" alt="Someone creating a schedule">
 
       <h3 id="toc_27">Mentor</h3>
 
