--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
       <button class="accordion" id="intr" onclick="window.location.href='index.html';">Introduction</button>
 
 
-      <button class="accordion" id="prog" onclick="window.location.href='program-info.html';">Program Information</button>
-      <div class="panel" id="panel2">
+      <button class="accordion" id="prog">Program Information</button>
+      <div class="panel" id="panel2" style="display: none;">
         <ul>
+          <a href="program-info.html#prog"><li>Program Information</li></a>
           <a href="program-info.html#toc_1"><li>Tools</li></a>
           <a href="program-info.html#toc_9"><li>DTC Speciality Road Maps</li></a>
           <a href="program-info.html#toc_17"><li>Student Experiences</li></a>
@@ -70,9 +71,10 @@
 
       <button class="accordion" id="facu" onclick="window.location.href='faculty.html';">Faculty & Staff</button>    
 
-      <button class="accordion" id="supe" onclick="window.location.href='superpowers.html';">Superpowers</button>
-      <div class="panel" id="panel2">
+      <button class="accordion" id="supe">Superpowers</button>
+      <div class="panel" id="panel2" style="display: none;">
         <ul>
+          <a href="superpowers.html#supe"><li>What are Superpowers?</li></a>
           <a href="superpowers.html#toc_0"><li>Web Development</li></a>
           <a href="superpowers.html#toc_5"><li>Audio/Video</li></a>
           <a href="superpowers.html#toc_8"><li>Multimedia Design</li></a>
@@ -85,9 +87,10 @@
         </ul>
       </div>
 
-      <button class="accordion" id="seni" onclick="window.location.href='senior-seminar.html';">Senior Seminar</button>
-      <div class="panel" id="panel2">
+      <button class="accordion" id="seni">Senior Seminar</button>
+      <div class="panel" id="panel2" style="display: none;">
         <ul>
+          <a href="senior-seminar.html#seni"><li>The Seminar</li></a>
           <a href="senior-seminar.html#toc_0"><li>Structure</li></a>
           <a href="senior-seminar.html#toc_8"><li>Teams</li></a>
           <a href="senior-seminar.html#toc_13"><li>What team will you be on?</li></a>
