changed wrapper id to class
changed the id of wrapper to a class

--- a/campus-support.html
+++ b/campus-support.html
@@ -131,7 +131,7 @@
       </h1> 
     </div>
 
-    <div id="wrapper">
+    <div class="wrapper">
 
       <h2 id="toc_0" class="campus-support">Need Assistance?</h2>
 
