--- a/faculty.html
+++ b/faculty.html
@@ -129,7 +129,7 @@
       </h1> 
     </div>
 
-    <div id="wrapper">
+    <div class="wrapper">
 
       <h2 id="toc_0" class="faculty">Get to Know Us</h2>
 
