--- a/superpowers.html
+++ b/superpowers.html
@@ -129,7 +129,7 @@
       </h1> 
     </div>
 
-    <div id="wrapper">
+    <div class="wrapper">
 
       <h2 class="super" id="toc_0">Web Development</h2>
 
