--- a/credits.html
+++ b/credits.html
@@ -131,7 +131,7 @@
       </h1> 
     </div>
 
-    <div id="wrapper">
+    <div class="wrapper">
 
       <h2 id="toc_0" class="credits">Credits</h2>
 
