--- a/senior-seminar.html
+++ b/senior-seminar.html
@@ -129,7 +129,7 @@
       </h1> 
     </div>
 
-    <div id="wrapper">
+    <div class="wrapper">
 
       <h2 id="toc_0" class="senior-seminar">Structure</h2>
 
