adding content class
adding content class

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 
     <div class="wrapper">
 
-      <h2 id="toc_0" class="ind">Welcome to The World of DTC!</h2>
-
-      <p>This is a publication written by students for students interested in obtaining a Bachelor of Arts degree in Digital Technology and Culture with the Creative Media and Digital Culture (CMDC) program through Washington State University Vancouver. </p>
-
-      <p>Our goal with this handbook is to inform you, our future students, on what to expect from your experience within the CMDC program. We as current students know how scary it can be to go into the program or any other degree not knowing what to expect. To offer incoming students some guidance that we could have benefitted from, we hope that this guide will provide you with some insight to get to know the program a little better before diving in.</p>
+      <div class="content">
+        <h2 id="toc_0" class="ind">Welcome to The World of DTC!</h2>
+        <p>This is a publication written by students for students interested in obtaining a Bachelor of Arts degree in Digital Technology and Culture with the Creative Media and Digital Culture (CMDC) program through Washington State University Vancouver. </p>
+        <p>Our goal with this handbook is to inform you, our future students, on what to expect from your experience within the CMDC program. We as current students know how scary it can be to go into the program or any other degree not knowing what to expect. To offer incoming students some guidance that we could have benefitted from, we hope that this guide will provide you with some insight to get to know the program a little better before diving in.</p>
+      </div>
 
 
     <script type="text/javascript" src="script.js"></script> 
