--- a/campus-support.html
+++ b/campus-support.html
@@ -134,7 +134,7 @@
       </h1> 
     </div>
 
-    <div id="wrapper">
+    <div class="wrapper">
 
       <h2 id="toc_0" class="campus-support">Need Assistance?</h2>
       <img id="cogs" src="img/Cogs_cropped.png">
