--- a/program-info.html
+++ b/program-info.html
@@ -128,7 +128,7 @@
       </h1> 
     </div>
 
-    <div id="wrapper">
+    <div class="wrapper">
 
       <div class="content">
         <h2 id="toc_0" class="program-info">Here's What You Need to Know</h2>
