p to h3 on Superpowers
Changed the some p tags to h3 tags on the Superpowers page

--- a/superpowers.html
+++ b/superpowers.html
@@ -185,7 +185,7 @@
 
       <p>Will Luers &amp; Brenda Grell</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>Audio/Video Producer</strong></p>
 
@@ -211,7 +211,7 @@
 
       <p>Chris Dreger</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>Multimedia Designer</strong></p>
 
@@ -239,7 +239,7 @@
 
       <p>Michael Rabby</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>Social Media Marketer</strong></p>
 
@@ -268,7 +268,7 @@
 
       <p>Brenda Grell</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>2D/3D Animator</strong></p>
 
@@ -302,7 +302,7 @@
 
       <p>Will Luers</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>Multimedia Writer</strong></p>
 
@@ -325,7 +325,7 @@
 
       <p>John Barber</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>UX/UI Designer</strong></p>
 
@@ -355,7 +355,7 @@
 
       <p>Will Luers</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>Game Designer</strong></p>
 
@@ -384,7 +384,7 @@
 
       <p>Dene Grigar</p>
 
-      <p>Job Examples</p>
+      <h3>Job Examples</h3>
 
       <p><strong>Project Manager</strong></p>
 
