--- a/program-info.html
+++ b/program-info.html
@@ -106,7 +106,7 @@
 
       <p>This publication was created in the fall of 2022 by the students of DTC 338 - Digital Publishing.</p>
       <div class="logos">
-         <img id="img27" src="" alt="publisher logo">
+         <img id="img27" src="img/cmdc-logo.jpg" alt="publisher logo">
        </div>
 
       
