adding content div
adding content div in wrapper

--- a/credits.html
+++ b/credits.html
@@ -133,26 +133,22 @@
 
     <div class="wrapper">
 
-      <h2 id="toc_0" class="credits">Credits</h2>
-
-      <h3 id="toc_1">Copywriting</h3>
-
-      <ul>
-      <li>Introduction written by Jianys Berrios and Rich Te</li>
-      <li>Chapter 1: Program Information written by Ryan Doherty and Jianys Berrios</li>
-      <li>Chapter 2: Superpowers written by Jessica Unruh and Courtney Minden</li>
-      <li>Chapter 3: Faculty written by Ben Peterson and Rich Te</li>
-      <li>Chapter 4: Senior Seminar written by Thea Hieronymous and Stratton Slater</li>
-      <li>Chapter 5: Campus/Support written by Sorya Baxter and Chrys Robb</li>
-      </ul>
-
-      <h3 id="toc_2">Web Design</h3>
-
-      <p>Stratton Slater, Sorya Baxter, Ryan Doherty, and Jessica Unruh</p>
-
-      <h3 id="toc_3">Multimedia Design</h3>
-
-      <p>Jianys Berrios, Chrys Robb, and Rich Te</p>
+      <div class="content">
+        <h2 id="toc_0" class="credits">Credits</h2>
+        <h3 id="toc_1">Copywriting</h3>
+        <ul>
+        <li>Introduction written by Jianys Berrios and Rich Te</li>
+        <li>Chapter 1: Program Information written by Ryan Doherty and Jianys Berrios</li>
+        <li>Chapter 2: Superpowers written by Jessica Unruh and Courtney Minden</li>
+        <li>Chapter 3: Faculty written by Ben Peterson and Rich Te</li>
+        <li>Chapter 4: Senior Seminar written by Thea Hieronymous and Stratton Slater</li>
+        <li>Chapter 5: Campus/Support written by Sorya Baxter and Chrys Robb</li>
+        </ul>
+        <h3 id="toc_2">Web Design</h3>
+        <p>Stratton Slater, Sorya Baxter, Ryan Doherty, and Jessica Unruh</p>
+        <h3 id="toc_3">Multimedia Design</h3>
+        <p>Jianys Berrios, Chrys Robb, and Rich Te</p>
+      </div>
 
 
     <script type="text/javascript" src="script.js"></script> 
