--- a/program-info.html
+++ b/program-info.html
@@ -60,7 +60,7 @@
 
 
       <button class="accordion" id="prog" onclick="window.location.href='program-info.html';">Program Information</button>
-      <div class="panel" id="panel2">
+      <div class="panel" id="panel2" style="display: none;">
         <ul>
           <a href="program-info.html#toc_1"><li>Tools</li></a>
           <a href="program-info.html#toc_9"><li>DTC Speciality Road Maps</li></a>
@@ -71,7 +71,7 @@
       <button class="accordion" id="facu" onclick="window.location.href='faculty.html';">Faculty & Staff</button>    
 
       <button class="accordion" id="supe" onclick="window.location.href='superpowers.html';">Superpowers</button>
-      <div class="panel" id="panel2">
+      <div class="panel" id="panel2" style="display: none;">
         <ul>
           <a href="superpowers.html#toc_0"><li>Web Development</li></a>
           <a href="superpowers.html#toc_5"><li>Audio/Video</li></a>
@@ -86,7 +86,7 @@
       </div>
 
       <button class="accordion" id="seni" onclick="window.location.href='senior-seminar.html';">Senior Seminar</button>
-      <div class="panel" id="panel2">
+      <div class="panel" id="panel2" style="display: none;">
         <ul>
           <a href="senior-seminar.html#toc_0"><li>Structure</li></a>
           <a href="senior-seminar.html#toc_8"><li>Teams</li></a>
