--- a/credits.html
+++ b/credits.html
@@ -54,6 +54,7 @@
       <a href="javascript:void(0)" id="close-btn" class="closebtn" onclick="closeNav()">&times;</a>
 
       <h1 id="title3">The DTC Handbook</span><span class="small">Your Guide to The Program</span></h1>
+      <img class="logo" src="img/dtc-title-logo.png">
       <hr>
 
       <nav>   
