--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </h1>
     </div>
 
-    <div class="wrapper">
+    <div id="intro-wrapper" class="wrapper">
 
       <div class="content">
         <h2 id="toc_0" class="ind">Welcome to The World of DTC!</h2>
