changes to nav on several pages

--- a/campus-support.html
+++ b/campus-support.html
@@ -62,7 +62,7 @@
       <button class="accordion" id="intr" onclick="window.location.href='index.html';">Introduction</button>
 
 
-      <button class="accordion" id="prog" onclick="window.location.href='program-info.html';">Program Information</button>
+      <button class="accordion" id="prog">Program Information</button>
       <div class="panel" id="panel2" style="display: none;">
         <ul>
           <a href="program-info.html#toc_1"><li>Tools</li></a>
@@ -75,7 +75,7 @@
       <button class="accordion" id="facu" onclick="window.location.href='faculty.html';">Faculty & Staff</button>
       
 
-      <button class="accordion" id="supe" onclick="window.location.href='superpowers.html';">Superpowers</button>
+      <button class="accordion" id="supe">Superpowers</button>
       <div class="panel" id="panel2" style="display: none;">
         <ul>
           <a href="superpowers.html#toc_0"><li>Web Development</li></a>
