--- a/superpowers.html
+++ b/superpowers.html
@@ -73,7 +73,7 @@
           <button class="accordion" id="facu" onclick="window.location.href='faculty.html';">Faculty & Staff</button>    
     
           <button class="accordion" id="supe">Superpowers</button>
-          <div class="panel" id="panel2" style="display: none;">
+          <div class="panel" id="panel2">
             <ul>
               <a href="superpowers.html#supe"><li>What are Superpowers?</li></a>
               <a href="superpowers.html#toc_0"><li>Web Development</li></a>
