--- a/senior-seminar.html
+++ b/senior-seminar.html
@@ -89,7 +89,7 @@
           </div>
     
           <button class="accordion" id="seni">Senior Seminar</button>
-          <div class="panel" id="panel2" style="display: none;">
+          <div class="panel" id="panel2">
             <ul>
               <a href="senior-seminar.html#seni"><li>The Seminar</li></a>
               <a href="senior-seminar.html#toc_0"><li>Structure</li></a>
