Padding for ul elements on Superpowers page
Padding for ul elements on Superpowers page

--- a/superpowers.html
+++ b/superpowers.html
@@ -146,7 +146,7 @@
         <p><strong>Web design and development</strong> is a field that focuses on creating webpages and web apps. It can include frontend, backend, and full stack work. Job titles can vary depending on the employer and job requirements; some examples include web developer, frontend developer, backend developer, JavaScript developer, web designer, software engineer, and content or web specialist. There are a large variety of tools and technologies used in this field.</p>
         <p><strong>Search Engine Optimization</strong>, abbreviated SEO, is about boosting the ranking and visibility of a website and its content. Typically SEO is part of creating websites, but it can also be considered part of social media strategies as it helps increase the presence of the website and whatever person or company it represents. Some of the technologies used include Google Search Engine, meta tags and schema in HTML5, and using specific keywords to attract users. If the website is based in WordPress, Yoast is a major plugin among several that help with SEO.</p>
         <h3 id="toc_3">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>HTML5</li>
         <li>CSS3</li>
         <li>JavaScript</li>
@@ -154,7 +154,7 @@
         <li>SQL</li>
         </ul>
         <h3 id="toc_4">Text editors/IDEs</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>Sublime</li>
         <li>VS Code</li>
         <li>Brackets</li>
@@ -171,7 +171,7 @@
         <p><strong>Audio/Video Post-Producer</strong></p>
         <p><strong>Audio/video production</strong> and post-production involves creating, editing, and finalizing audio and video media. Producers can generate their own content, but can also edit content that was previously filmed or recorded by different people. This can be things like environmental audio for games, soundtracks for movies, show or movie trailers, and promotional videos.</p>
         <h3 id="toc_7">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>Adobe After Effects</li>
         <li>Adobe Premiere Pro </li>
         <li>Adobe Audition</li>
@@ -187,7 +187,7 @@
         <p><strong>Multimedia design</strong> is a form of design that is primarily digital but can use techniques from traditional fine arts. It involves color theory, typography, form and function, as well as a knack for using design or art-based software. The designer’s work may include logos, illustrations for a website or digital book, or branding for a business or product.</p>
         <p><strong>Content development</strong> involves creating a variety of media and text items. This can range anywhere from blog posts, graphics, videos, and animation. The central idea is that something is being created. Companies may want a content creator to produce content for their social media, take photos, or create images for later use.</p>
         <h3 id="toc_10">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>Adobe Photoshop</li>
         <li>Illustrator</li>
         <li>InDesign</li>
@@ -203,7 +203,7 @@
         <p><strong>Search Engine Marketing (SEM) Specialist</strong></p>
         <p><strong>​​Social media</strong> as a superpower is about promoting and boosting the online presence of the company, website, or product. It involves conducting research into the userbase of said product and determining how best to reach them. It can also include managing social media accounts, posting to a blog, or developing new content for social media platforms.</p>
         <h3 id="toc_13">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>Later.com</li>
         <li>Canva</li>
         <li>Campaign Monitor</li>
@@ -222,7 +222,7 @@
         <p><strong>Concept Artist</strong></p>
         <p><strong>Animation</strong> is all about knowing how to create animations fluently. This mainly involves those who can design in either 2D and/or 3D. Job examples are animators, concept artist, game developer, graphic designer, illustrator, VFX artist, and web designer.</p>
         <h3 id="toc_16">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>Adobe Premiere</li>
         <li>Adobe After Effects</li>
         <li>Adobe Animate</li>
@@ -238,7 +238,7 @@
         <p><strong>Multimedia Writer</strong></p>
         <p><strong>Digital publishing</strong> is for those who are involved with writing in the hypermedia area along with understanding the different mediums of writing. Jobs usually revolve around where writing is needed from writing for online media (newspapers and magazines) to multiple varieties (video games, television and film). Some jobs would require one to understand how to use hypertext.</p>
         <h3 id="toc_19">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>HTML5</li>
         <li>Adobe Creative Suite</li>
         </ul>
@@ -253,7 +253,7 @@
         <p><strong>UX Researcher</strong></p>
         <p><strong>UX/UI design</strong>, or user experience/user interface design, is a field that emphasizes designing products, interfaces, websites, or tools that work intuitively with its userbase. They do research, conduct tests, and make recommendations based on their findings. They can also create the design of the product itself, using tools like Figma or Adobe XD. That said, some of their design work can also be done with simple paper and pens.</p>
         <h3 id="toc_22">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>Adobe XD</li>
         <li>Adobe Illustrator</li>
         <li>Figma</li>
@@ -270,7 +270,7 @@
         <p><strong>Game Developer</strong></p>
         <p><strong>Game studies</strong> involves those who are into creating video games or studying video games. Those who want to create video games can either do the design or development of video games, or they can do both. Jobs mainly involve game companies for those who want to create games.</p>
         <h3 id="toc_25">Example of tools</h3>
-        <ul>
+        <ul class="seminar_lists">
         <li>Java</li>
         <li>C or C++</li>
         <li>Unreal Engine</li>
