tools image html
tools image html

--- a/program-info.html
+++ b/program-info.html
@@ -141,7 +141,7 @@
         <p>In the DTC program you’ll focus on the relationship between technology and humanity, integrating critical thinking, creativity and computing skills with coursework in the arts, humanities, social sciences, management information systems and computer science. </p>
         <p>The broad-based, interdisciplinary DTC degree prepares you for a culturally diverse, technologically complex 21st century.</p>
         <h2 id="toc_1" class="program-info">Tools</h2>
-         <!--<img id="img2" src="img/tools.jpg" alt="Graphic of tools">-->
+        <img id="tools" src="img/Tools_cropped.png">
         <p>Modern digital professionals use a variety of tools to accomplish their work and are constantly learning new ones! Here are a few of the most prominent that you will use in the program, but this is by no means an exhaustive list. </p>
         <h3 id="toc_2">Sublime Text - <a href="https://www.sublimetext.com/">https://www.sublimetext.com/</a></h3>
         <p>Sublime Text is a text editor that you’ll use frequently throughout your time in the DTC program. It is where you’ll learn to use HTML, CSS, and JavaScript. If your goal is to be a web developer, this is the tool you’ll use the most.</p>
